# datalake

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  README.md  ROADMAP.md  dagster.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.omp/plugins/: installed_plugins.json  omp-plugins.lock.json
scripts/: migrate_from_ig_pipeline.py  migrate_to_v2.py  rebuild_from_bronze.py
src/datalake/: __init__.py  definitions.py  resources.py  schedules.py
src/datalake/defs/: __init__.py
src/datalake/defs/common/: __init__.py  lake.py  resources.py  schedules.py
src/datalake/defs/instagram/: __init__.py  asset_checks.py  assets.py  config.py
src/datalake/defs/serving/: __init__.py  asset_checks.py  assets.py
tasks/: todo.md
tests/: conftest.py  test_bronze.py  test_gold.py  test_migrate.py  test_serving.py  test_silver.py
tests/data/: bronze_sample.parquet
tests/e2e/: test_full_pipeline.py  test_operational.py  test_snapshot.py
tests/fixtures/: gold_factories.py  ig_bronze_factories.py  serving_factories.py  silver_factories.py
tests/integration/instagram/: test_bronze_to_silver.py  test_silver_to_gold.py
tests/integration/serving/: test_gold_to_serving.py
tests/operational/: expected_schema.py  test_state_compatibility.py
tests/unit/instagram/: test_bronze.py  test_gold.py  test_ig_asset_checks.py  test_silver.py
tests/unit/serving/: test_dim_time.py  test_serving.py  test_serving_asset_checks.py
