[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalake"
version = "0.1.0"
description = "Dagster + Parquet + DuckDB medallion lakehouse platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.9",
    "dagster-duckdb>=0.29",
    "dagster-webserver>=1.9",
    "duckdb>=1.0",
    "httpx",
    "google-genai",
    "polars>=1.0",
    "pydantic>=2.0",
    "python-dotenv",
    "tenacity",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/datalake"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.dagster]
module_name = "datalake.definitions"
